third_party/move/move-compiler-v2/tests/checking/visibility-checker/call_friend_only.exp

Diagnostics:
error: friend function `0xdeadbeef::M::bar` cannot be called from `0xdeadbeef::Q` (not a friend of `0xdeadbeef::M`)
   ┌─ tests/checking/visibility-checker/call_friend_only.move:9:24
   │
 9 │     public(friend) fun bar(): u64 { foo() }
   │                        ^^^ called from function `0xdeadbeef::Q::calls_bar`
   ·
46 │         M::id(5) + bar()
   │                    ----- called here

error: friend function `0xdeadbeef::M::id` cannot be called from `0xdeadbeef::Q` (not a friend of `0xdeadbeef::M`)
   ┌─ tests/checking/visibility-checker/call_friend_only.move:10:24
   │
10 │     public(friend) fun id<T>(x: T): T { x  }
   │                        ^^ called from function `0xdeadbeef::Q::calls_bar`
   ·
46 │         M::id(5) + bar()
   │         -------- called here
